# ggj2016

./: .gitignore  Cargo.toml  Makefile  README.md
src/: app.rs  audio.rs  camera.rs  config.rs  entity.rs  entitymanager.rs  graphics_context.rs  main.rs  person.rs  personspawner.rs  player.rs  system.rs
